begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  *  with the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.container.common.states.endpoint
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|states
operator|.
name|endpoint
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|Descriptors
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|GeneratedMessage
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|conf
operator|.
name|Configuration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|DatanodeDetails
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|HddsProtos
operator|.
name|DatanodeDetailsProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|PipelineActionsProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|PipelineAction
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerActionsProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerAction
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|SCMHeartbeatRequestProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|SCMCommandProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|SCMHeartbeatResponseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|DeletedContainerBlocksSummary
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|statemachine
operator|.
name|EndpointStateMachine
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|statemachine
operator|.
name|EndpointStateMachine
operator|.
name|EndPointStates
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|statemachine
operator|.
name|StateContext
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|commands
operator|.
name|CloseContainerCommand
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|commands
operator|.
name|DeleteBlocksCommand
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|commands
operator|.
name|ReplicateContainerCommand
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|time
operator|.
name|ZonedDateTime
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|LinkedList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|Callable
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|HddsConfigKeys
operator|.
name|HDDS_CONTAINER_ACTION_MAX_LIMIT
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|HddsConfigKeys
operator|.
name|HDDS_CONTAINER_ACTION_MAX_LIMIT_DEFAULT
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|HddsConfigKeys
operator|.
name|HDDS_PIPELINE_ACTION_MAX_LIMIT
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdds
operator|.
name|HddsConfigKeys
operator|.
name|HDDS_PIPELINE_ACTION_MAX_LIMIT_DEFAULT
import|;
end_import

begin_comment
comment|/**  * Heartbeat class for SCMs.  */
end_comment

begin_class
DECL|class|HeartbeatEndpointTask
specifier|public
class|class
name|HeartbeatEndpointTask
implements|implements
name|Callable
argument_list|<
name|EndpointStateMachine
operator|.
name|EndPointStates
argument_list|>
block|{
DECL|field|LOG
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|HeartbeatEndpointTask
operator|.
name|class
argument_list|)
decl_stmt|;
DECL|field|rpcEndpoint
specifier|private
specifier|final
name|EndpointStateMachine
name|rpcEndpoint
decl_stmt|;
DECL|field|conf
specifier|private
specifier|final
name|Configuration
name|conf
decl_stmt|;
DECL|field|datanodeDetailsProto
specifier|private
name|DatanodeDetailsProto
name|datanodeDetailsProto
decl_stmt|;
DECL|field|context
specifier|private
name|StateContext
name|context
decl_stmt|;
DECL|field|maxContainerActionsPerHB
specifier|private
name|int
name|maxContainerActionsPerHB
decl_stmt|;
DECL|field|maxPipelineActionsPerHB
specifier|private
name|int
name|maxPipelineActionsPerHB
decl_stmt|;
comment|/**    * Constructs a SCM heart beat.    *    * @param conf Config.    */
DECL|method|HeartbeatEndpointTask (EndpointStateMachine rpcEndpoint, Configuration conf, StateContext context)
specifier|public
name|HeartbeatEndpointTask
parameter_list|(
name|EndpointStateMachine
name|rpcEndpoint
parameter_list|,
name|Configuration
name|conf
parameter_list|,
name|StateContext
name|context
parameter_list|)
block|{
name|this
operator|.
name|rpcEndpoint
operator|=
name|rpcEndpoint
expr_stmt|;
name|this
operator|.
name|conf
operator|=
name|conf
expr_stmt|;
name|this
operator|.
name|context
operator|=
name|context
expr_stmt|;
name|this
operator|.
name|maxContainerActionsPerHB
operator|=
name|conf
operator|.
name|getInt
argument_list|(
name|HDDS_CONTAINER_ACTION_MAX_LIMIT
argument_list|,
name|HDDS_CONTAINER_ACTION_MAX_LIMIT_DEFAULT
argument_list|)
expr_stmt|;
name|this
operator|.
name|maxPipelineActionsPerHB
operator|=
name|conf
operator|.
name|getInt
argument_list|(
name|HDDS_PIPELINE_ACTION_MAX_LIMIT
argument_list|,
name|HDDS_PIPELINE_ACTION_MAX_LIMIT_DEFAULT
argument_list|)
expr_stmt|;
block|}
comment|/**    * Get the container Node ID proto.    *    * @return ContainerNodeIDProto    */
DECL|method|getDatanodeDetailsProto ()
specifier|public
name|DatanodeDetailsProto
name|getDatanodeDetailsProto
parameter_list|()
block|{
return|return
name|datanodeDetailsProto
return|;
block|}
comment|/**    * Set container node ID proto.    *    * @param datanodeDetailsProto - the node id.    */
DECL|method|setDatanodeDetailsProto (DatanodeDetailsProto datanodeDetailsProto)
specifier|public
name|void
name|setDatanodeDetailsProto
parameter_list|(
name|DatanodeDetailsProto
name|datanodeDetailsProto
parameter_list|)
block|{
name|this
operator|.
name|datanodeDetailsProto
operator|=
name|datanodeDetailsProto
expr_stmt|;
block|}
comment|/**    * Computes a result, or throws an exception if unable to do so.    *    * @return computed result    * @throws Exception if unable to compute a result    */
annotation|@
name|Override
DECL|method|call ()
specifier|public
name|EndpointStateMachine
operator|.
name|EndPointStates
name|call
parameter_list|()
throws|throws
name|Exception
block|{
name|rpcEndpoint
operator|.
name|lock
argument_list|()
expr_stmt|;
name|SCMHeartbeatRequestProto
operator|.
name|Builder
name|requestBuilder
init|=
literal|null
decl_stmt|;
try|try
block|{
name|Preconditions
operator|.
name|checkState
argument_list|(
name|this
operator|.
name|datanodeDetailsProto
operator|!=
literal|null
argument_list|)
expr_stmt|;
name|requestBuilder
operator|=
name|SCMHeartbeatRequestProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|setDatanodeDetails
argument_list|(
name|datanodeDetailsProto
argument_list|)
expr_stmt|;
name|addReports
argument_list|(
name|requestBuilder
argument_list|)
expr_stmt|;
name|addContainerActions
argument_list|(
name|requestBuilder
argument_list|)
expr_stmt|;
name|addPipelineActions
argument_list|(
name|requestBuilder
argument_list|)
expr_stmt|;
name|SCMHeartbeatResponseProto
name|reponse
init|=
name|rpcEndpoint
operator|.
name|getEndPoint
argument_list|()
operator|.
name|sendHeartbeat
argument_list|(
name|requestBuilder
operator|.
name|build
argument_list|()
argument_list|)
decl_stmt|;
name|processResponse
argument_list|(
name|reponse
argument_list|,
name|datanodeDetailsProto
argument_list|)
expr_stmt|;
name|rpcEndpoint
operator|.
name|setLastSuccessfulHeartbeat
argument_list|(
name|ZonedDateTime
operator|.
name|now
argument_list|()
argument_list|)
expr_stmt|;
name|rpcEndpoint
operator|.
name|zeroMissedCount
argument_list|()
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
comment|// put back the reports which failed to be sent
name|putBackReports
argument_list|(
name|requestBuilder
argument_list|)
expr_stmt|;
name|rpcEndpoint
operator|.
name|logIfNeeded
argument_list|(
name|ex
argument_list|)
expr_stmt|;
block|}
finally|finally
block|{
name|rpcEndpoint
operator|.
name|unlock
argument_list|()
expr_stmt|;
block|}
return|return
name|rpcEndpoint
operator|.
name|getState
argument_list|()
return|;
block|}
comment|// TODO: Make it generic.
DECL|method|putBackReports (SCMHeartbeatRequestProto.Builder requestBuilder)
specifier|private
name|void
name|putBackReports
parameter_list|(
name|SCMHeartbeatRequestProto
operator|.
name|Builder
name|requestBuilder
parameter_list|)
block|{
name|List
argument_list|<
name|GeneratedMessage
argument_list|>
name|reports
init|=
operator|new
name|LinkedList
argument_list|<>
argument_list|()
decl_stmt|;
if|if
condition|(
name|requestBuilder
operator|.
name|hasContainerReport
argument_list|()
condition|)
block|{
name|reports
operator|.
name|add
argument_list|(
name|requestBuilder
operator|.
name|getContainerReport
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
name|requestBuilder
operator|.
name|hasNodeReport
argument_list|()
condition|)
block|{
name|reports
operator|.
name|add
argument_list|(
name|requestBuilder
operator|.
name|getNodeReport
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
name|requestBuilder
operator|.
name|getCommandStatusReportsCount
argument_list|()
operator|!=
literal|0
condition|)
block|{
for|for
control|(
name|GeneratedMessage
name|msg
range|:
name|requestBuilder
operator|.
name|getCommandStatusReportsList
argument_list|()
control|)
block|{
name|reports
operator|.
name|add
argument_list|(
name|msg
argument_list|)
expr_stmt|;
block|}
block|}
name|context
operator|.
name|putBackReports
argument_list|(
name|reports
argument_list|)
expr_stmt|;
block|}
comment|/**    * Adds all the available reports to heartbeat.    *    * @param requestBuilder builder to which the report has to be added.    */
DECL|method|addReports (SCMHeartbeatRequestProto.Builder requestBuilder)
specifier|private
name|void
name|addReports
parameter_list|(
name|SCMHeartbeatRequestProto
operator|.
name|Builder
name|requestBuilder
parameter_list|)
block|{
for|for
control|(
name|GeneratedMessage
name|report
range|:
name|context
operator|.
name|getAllAvailableReports
argument_list|()
control|)
block|{
name|String
name|reportName
init|=
name|report
operator|.
name|getDescriptorForType
argument_list|()
operator|.
name|getFullName
argument_list|()
decl_stmt|;
for|for
control|(
name|Descriptors
operator|.
name|FieldDescriptor
name|descriptor
range|:
name|SCMHeartbeatRequestProto
operator|.
name|getDescriptor
argument_list|()
operator|.
name|getFields
argument_list|()
control|)
block|{
name|String
name|heartbeatFieldName
init|=
name|descriptor
operator|.
name|getMessageType
argument_list|()
operator|.
name|getFullName
argument_list|()
decl_stmt|;
if|if
condition|(
name|heartbeatFieldName
operator|.
name|equals
argument_list|(
name|reportName
argument_list|)
condition|)
block|{
if|if
condition|(
name|descriptor
operator|.
name|isRepeated
argument_list|()
condition|)
block|{
name|requestBuilder
operator|.
name|addRepeatedField
argument_list|(
name|descriptor
argument_list|,
name|report
argument_list|)
expr_stmt|;
block|}
else|else
block|{
name|requestBuilder
operator|.
name|setField
argument_list|(
name|descriptor
argument_list|,
name|report
argument_list|)
expr_stmt|;
block|}
block|}
block|}
block|}
block|}
comment|/**    * Adds all the pending ContainerActions to the heartbeat.    *    * @param requestBuilder builder to which the report has to be added.    */
DECL|method|addContainerActions ( SCMHeartbeatRequestProto.Builder requestBuilder)
specifier|private
name|void
name|addContainerActions
parameter_list|(
name|SCMHeartbeatRequestProto
operator|.
name|Builder
name|requestBuilder
parameter_list|)
block|{
name|List
argument_list|<
name|ContainerAction
argument_list|>
name|actions
init|=
name|context
operator|.
name|getPendingContainerAction
argument_list|(
name|maxContainerActionsPerHB
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|actions
operator|.
name|isEmpty
argument_list|()
condition|)
block|{
name|ContainerActionsProto
name|cap
init|=
name|ContainerActionsProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|addAllContainerActions
argument_list|(
name|actions
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|requestBuilder
operator|.
name|setContainerActions
argument_list|(
name|cap
argument_list|)
expr_stmt|;
block|}
block|}
comment|/**    * Adds all the pending PipelineActions to the heartbeat.    *    * @param requestBuilder builder to which the report has to be added.    */
DECL|method|addPipelineActions ( SCMHeartbeatRequestProto.Builder requestBuilder)
specifier|private
name|void
name|addPipelineActions
parameter_list|(
name|SCMHeartbeatRequestProto
operator|.
name|Builder
name|requestBuilder
parameter_list|)
block|{
name|List
argument_list|<
name|PipelineAction
argument_list|>
name|actions
init|=
name|context
operator|.
name|getPendingPipelineAction
argument_list|(
name|maxPipelineActionsPerHB
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|actions
operator|.
name|isEmpty
argument_list|()
condition|)
block|{
name|PipelineActionsProto
name|pap
init|=
name|PipelineActionsProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|addAllPipelineActions
argument_list|(
name|actions
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|requestBuilder
operator|.
name|setPipelineActions
argument_list|(
name|pap
argument_list|)
expr_stmt|;
block|}
block|}
comment|/**    * Returns a builder class for HeartbeatEndpointTask task.    * @return   Builder.    */
DECL|method|newBuilder ()
specifier|public
specifier|static
name|Builder
name|newBuilder
parameter_list|()
block|{
return|return
operator|new
name|Builder
argument_list|()
return|;
block|}
comment|/**    * Add this command to command processing Queue.    *    * @param response - SCMHeartbeat response.    */
DECL|method|processResponse (SCMHeartbeatResponseProto response, final DatanodeDetailsProto datanodeDetails)
specifier|private
name|void
name|processResponse
parameter_list|(
name|SCMHeartbeatResponseProto
name|response
parameter_list|,
specifier|final
name|DatanodeDetailsProto
name|datanodeDetails
parameter_list|)
block|{
name|Preconditions
operator|.
name|checkState
argument_list|(
name|response
operator|.
name|getDatanodeUUID
argument_list|()
operator|.
name|equalsIgnoreCase
argument_list|(
name|datanodeDetails
operator|.
name|getUuid
argument_list|()
argument_list|)
argument_list|,
literal|"Unexpected datanode ID in the response."
argument_list|)
expr_stmt|;
comment|// Verify the response is indeed for this datanode.
for|for
control|(
name|SCMCommandProto
name|commandResponseProto
range|:
name|response
operator|.
name|getCommandsList
argument_list|()
control|)
block|{
switch|switch
condition|(
name|commandResponseProto
operator|.
name|getCommandType
argument_list|()
condition|)
block|{
case|case
name|reregisterCommand
case|:
if|if
condition|(
name|rpcEndpoint
operator|.
name|getState
argument_list|()
operator|==
name|EndPointStates
operator|.
name|HEARTBEAT
condition|)
block|{
if|if
condition|(
name|LOG
operator|.
name|isDebugEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"Received SCM notification to register."
operator|+
literal|" Interrupt HEARTBEAT and transit to REGISTER state."
argument_list|)
expr_stmt|;
block|}
name|rpcEndpoint
operator|.
name|setState
argument_list|(
name|EndPointStates
operator|.
name|REGISTER
argument_list|)
expr_stmt|;
block|}
else|else
block|{
if|if
condition|(
name|LOG
operator|.
name|isDebugEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"Illegal state {} found, expecting {}."
argument_list|,
name|rpcEndpoint
operator|.
name|getState
argument_list|()
operator|.
name|name
argument_list|()
argument_list|,
name|EndPointStates
operator|.
name|HEARTBEAT
argument_list|)
expr_stmt|;
block|}
block|}
break|break;
case|case
name|deleteBlocksCommand
case|:
name|DeleteBlocksCommand
name|db
init|=
name|DeleteBlocksCommand
operator|.
name|getFromProtobuf
argument_list|(
name|commandResponseProto
operator|.
name|getDeleteBlocksCommandProto
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
operator|!
name|db
operator|.
name|blocksTobeDeleted
argument_list|()
operator|.
name|isEmpty
argument_list|()
condition|)
block|{
if|if
condition|(
name|LOG
operator|.
name|isDebugEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
name|DeletedContainerBlocksSummary
operator|.
name|getFrom
argument_list|(
name|db
operator|.
name|blocksTobeDeleted
argument_list|()
argument_list|)
operator|.
name|toString
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|this
operator|.
name|context
operator|.
name|addCommand
argument_list|(
name|db
argument_list|)
expr_stmt|;
block|}
break|break;
case|case
name|closeContainerCommand
case|:
name|CloseContainerCommand
name|closeContainer
init|=
name|CloseContainerCommand
operator|.
name|getFromProtobuf
argument_list|(
name|commandResponseProto
operator|.
name|getCloseContainerCommandProto
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|LOG
operator|.
name|isDebugEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"Received SCM container close request for container {}"
argument_list|,
name|closeContainer
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|this
operator|.
name|context
operator|.
name|addCommand
argument_list|(
name|closeContainer
argument_list|)
expr_stmt|;
break|break;
case|case
name|replicateContainerCommand
case|:
name|ReplicateContainerCommand
name|replicateContainerCommand
init|=
name|ReplicateContainerCommand
operator|.
name|getFromProtobuf
argument_list|(
name|commandResponseProto
operator|.
name|getReplicateContainerCommandProto
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|LOG
operator|.
name|isDebugEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"Received SCM container replicate request for container {}"
argument_list|,
name|replicateContainerCommand
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|this
operator|.
name|context
operator|.
name|addCommand
argument_list|(
name|replicateContainerCommand
argument_list|)
expr_stmt|;
break|break;
default|default:
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"Unknown response : "
operator|+
name|commandResponseProto
operator|.
name|getCommandType
argument_list|()
operator|.
name|name
argument_list|()
argument_list|)
throw|;
block|}
block|}
block|}
comment|/**    * Builder class for HeartbeatEndpointTask.    */
DECL|class|Builder
specifier|public
specifier|static
class|class
name|Builder
block|{
DECL|field|endPointStateMachine
specifier|private
name|EndpointStateMachine
name|endPointStateMachine
decl_stmt|;
DECL|field|conf
specifier|private
name|Configuration
name|conf
decl_stmt|;
DECL|field|datanodeDetails
specifier|private
name|DatanodeDetails
name|datanodeDetails
decl_stmt|;
DECL|field|context
specifier|private
name|StateContext
name|context
decl_stmt|;
comment|/**      * Constructs the builder class.      */
DECL|method|Builder ()
specifier|public
name|Builder
parameter_list|()
block|{     }
comment|/**      * Sets the endpoint state machine.      *      * @param rpcEndPoint - Endpoint state machine.      * @return Builder      */
DECL|method|setEndpointStateMachine (EndpointStateMachine rpcEndPoint)
specifier|public
name|Builder
name|setEndpointStateMachine
parameter_list|(
name|EndpointStateMachine
name|rpcEndPoint
parameter_list|)
block|{
name|this
operator|.
name|endPointStateMachine
operator|=
name|rpcEndPoint
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Sets the Config.      *      * @param config - config      * @return Builder      */
DECL|method|setConfig (Configuration config)
specifier|public
name|Builder
name|setConfig
parameter_list|(
name|Configuration
name|config
parameter_list|)
block|{
name|this
operator|.
name|conf
operator|=
name|config
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Sets the NodeID.      *      * @param dnDetails - NodeID proto      * @return Builder      */
DECL|method|setDatanodeDetails (DatanodeDetails dnDetails)
specifier|public
name|Builder
name|setDatanodeDetails
parameter_list|(
name|DatanodeDetails
name|dnDetails
parameter_list|)
block|{
name|this
operator|.
name|datanodeDetails
operator|=
name|dnDetails
expr_stmt|;
return|return
name|this
return|;
block|}
comment|/**      * Sets the context.      * @param stateContext - State context.      * @return this.      */
DECL|method|setContext (StateContext stateContext)
specifier|public
name|Builder
name|setContext
parameter_list|(
name|StateContext
name|stateContext
parameter_list|)
block|{
name|this
operator|.
name|context
operator|=
name|stateContext
expr_stmt|;
return|return
name|this
return|;
block|}
DECL|method|build ()
specifier|public
name|HeartbeatEndpointTask
name|build
parameter_list|()
block|{
if|if
condition|(
name|endPointStateMachine
operator|==
literal|null
condition|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"No endpoint specified."
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"A valid endpoint state machine is"
operator|+
literal|" needed to construct HeartbeatEndpointTask task"
argument_list|)
throw|;
block|}
if|if
condition|(
name|conf
operator|==
literal|null
condition|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"No config specified."
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"A valid configration is needed to"
operator|+
literal|" construct HeartbeatEndpointTask task"
argument_list|)
throw|;
block|}
if|if
condition|(
name|datanodeDetails
operator|==
literal|null
condition|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"No datanode specified."
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"A vaild Node ID is needed to "
operator|+
literal|"construct HeartbeatEndpointTask task"
argument_list|)
throw|;
block|}
name|HeartbeatEndpointTask
name|task
init|=
operator|new
name|HeartbeatEndpointTask
argument_list|(
name|this
operator|.
name|endPointStateMachine
argument_list|,
name|this
operator|.
name|conf
argument_list|,
name|this
operator|.
name|context
argument_list|)
decl_stmt|;
name|task
operator|.
name|setDatanodeDetailsProto
argument_list|(
name|datanodeDetails
operator|.
name|getProtoBufMessage
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|task
return|;
block|}
block|}
block|}
end_class

end_unit

